--- a/index.html
+++ b/index.html
@@ -68,14 +68,19 @@
         .cam-controls { flex: 1; display: flex; justify-content: space-around; align-items: center; padding: 20px; background: #000; }
         #scan-loader { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 4000; display: none; flex-direction: column; align-items: center; justify-content: center; color: white; }
         #scan-progress { margin-top: 12px; font-weight:700; }
+
+        /* Settings button */
+        .header-actions { display:flex; gap:12px; align-items:center; }
+        .icon-btn { background:none; border:1px solid transparent; color:var(--text); padding:8px; border-radius:8px; cursor:pointer; }
     </style>
 </head>
 <body data-theme="dark">
 
     <header class="app-header">
-        <div class="logo"><i data-lucide="zap"></i> BolusBuddy Pro</div>
-        <div style="display:flex; align-items:center; gap:15px;">
-            <button class="theme-toggle" onclick="toggleTheme()" id="theme-btn"><i data-lucide="sun"></i></button>
+        <div class="logo"><i data-lucide="zap"></i> <span id="app-title">BolusBuddy Pro</span></div>
+        <div class="header-actions">
+            <button class="icon-btn" onclick="toggleTheme()" id="theme-btn"><i data-lucide="sun"></i></button>
+            <button class="icon-btn" onclick="openSettings()"><i data-lucide="settings"></i></button>
             <div id="sel-count" style="font-size: 0.8rem; opacity: 0.7;">0 Selected</div>
         </div>
     </header>
@@ -137,6 +142,29 @@
         </div>
     </div>
 
+    <!-- Settings modal -->
+    <div class="modal" id="settings-modal">
+        <div class="modal-content">
+            <h3 style="margin-bottom:12px;">Settings</h3>
+            <label>Your name</label>
+            <input type="text" id="setting-name" placeholder="Debry">
+            <label>Primary color (hex)</label>
+            <input type="text" id="setting-primary" placeholder="#38bdf8">
+            <label>Accent color (hex)</label>
+            <input type="text" id="setting-accent" placeholder="#818cf8">
+            <label style="margin-top:6px;">Scan items</label>
+            <div style="display:flex; gap:10px; margin-bottom:12px;">
+                <label style="display:flex; align-items:center; gap:8px;"><input type="checkbox" id="scan-carb" /> Carbs /100g</label>
+                <label style="display:flex; align-items:center; gap:8px;"><input type="checkbox" id="scan-fat" /> Fat /100g</label>
+                <label style="display:flex; align-items:center; gap:8px;"><input type="checkbox" id="scan-serving" /> Serving weight</label>
+            </div>
+            <div style="display:flex; gap:10px;">
+                <button onclick="closeSettings()" style="flex:1; padding:12px; border:none; border-radius:12px; background:var(--border); color:var(--text);">Cancel</button>
+                <button onclick="saveSettings()" style="flex:1; padding:12px; border:none; border-radius:12px; background:var(--primary); color:white; font-weight:800;">Save</button>
+            </div>
+        </div>
+    </div>
+
     <div id="camera-view">
         <video id="video" autoplay playsinline muted></video>
         <div class="cam-controls">
@@ -161,6 +189,63 @@
         let selected = new Set();
         lucide.createIcons();
 
+        // Settings defaults
+        const defaultSettings = {
+            name: '',
+            primary: '#38bdf8',
+            accent: '#818cf8',
+            scanItems: { carb: true, fat: true, serving: true }
+        };
+
+        function loadSettings() {
+            const raw = localStorage.getItem('bb_settings');
+            const s = raw ? JSON.parse(raw) : defaultSettings;
+            // merge missing keys
+            const settings = Object.assign({}, defaultSettings, s);
+            settings.scanItems = Object.assign({}, defaultSettings.scanItems, settings.scanItems || {});
+            applySettings(settings);
+            return settings;
+        }
+
+        function applySettings(settings) {
+            // apply colors
+            if (settings.primary) document.documentElement.style.setProperty('--primary', settings.primary);
+            if (settings.accent) document.documentElement.style.setProperty('--accent', settings.accent);
+            // update UI name
+            const title = document.getElementById('app-title');
+            if (settings.name && settings.name.trim()) title.innerText = `BolusBuddy — ${settings.name.trim()}`;
+            else title.innerText = 'BolusBuddy Pro';
+            // populate settings modal fields if open
+            document.getElementById('setting-name').value = settings.name || '';
+            document.getElementById('setting-primary').value = settings.primary || '';
+            document.getElementById('setting-accent').value = settings.accent || '';
+            document.getElementById('scan-carb').checked = !!settings.scanItems.carb;
+            document.getElementById('scan-fat').checked = !!settings.scanItems.fat;
+            document.getElementById('scan-serving').checked = !!settings.scanItems.serving;
+            // store current settings in memory for runtime use
+            window._bb_settings = settings;
+        }
+
+        function saveSettings() {
+            const s = {
+                name: document.getElementById('setting-name').value.trim(),
+                primary: document.getElementById('setting-primary').value.trim() || defaultSettings.primary,
+                accent: document.getElementById('setting-accent').value.trim() || defaultSettings.accent,
+                scanItems: {
+                    carb: !!document.getElementById('scan-carb').checked,
+                    fat: !!document.getElementById('scan-fat').checked,
+                    serving: !!document.getElementById('scan-serving').checked
+                }
+            };
+            localStorage.setItem('bb_settings', JSON.stringify(s));
+            applySettings(s);
+            closeSettings();
+        }
+
+        function openSettings() { document.getElementById('settings-modal').classList.add('active'); }
+        function closeSettings() { document.getElementById('settings-modal').classList.remove('active'); }
+
+        // Theme toggle
         function toggleTheme() {
             const current = document.body.getAttribute('data-theme');
             setTheme(current === 'dark' ? 'light' : 'dark');
@@ -174,6 +259,7 @@
         }
         setTheme(localStorage.getItem('bb_theme') || 'dark');
 
+        // Render list
         function renderFoods() {
             const query = document.getElementById('search-input').value.toLowerCase();
             const list = document.getElementById('food-list');
@@ -181,7 +267,7 @@
             const filtered = foods.filter(f => f.name.toLowerCase().includes(query));
             const cats = [...new Set(filtered.map(f => f.cat))].sort();
             cats.forEach(cat => {
-                list.innerHTML += `<div class="category-label">${cat}</div>`;
+                list.innerHTML += `<div class="category-label">${escapeHtml(cat)}</div>`;
                 filtered.filter(f => f.cat === cat).sort((a,b) => a.name.localeCompare(b.name)).forEach(f => {
                     const isSel = selected.has(f.id) ? 'selected' : '';
                     list.innerHTML += `<div class="food-card ${isSel}" onclick="toggleFood(${f.id})"><div class="food-info"><div><strong>${escapeHtml(f.name)}</strong> <small style="opacity:0.6">${escapeHtml(f.measure)}</small></div><div class="food-stats"><div class="stat c">${f.carbs}<span>Carbs</span></div><div class="stat f">${f.fat}<span>Fat</span></div></div></div><div class="card-actions"><button class="action-btn" onclick="event.stopPropagation(); editFood(${f.id})"><i data-lucide="edit-2" size="18"></i></button></div></div>`;
@@ -207,9 +293,16 @@
         }
 
         function clearSelection() { selected.clear(); updateBolus(); renderFoods(); }
-        function openAddModal() { closeModal(); document.getElementById('add-modal').classList.add('active'); setTab('manual'); }
-        function editFood(id) { const f = foods.find(x => x.id === id); if(!f) return; document.getElementById('modal-title').innerText = "Edit Food"; document.getElementById('edit-id').value = f.id; document.getElementById('new-name').value = f.name; document.getElementById('new-carbs').value = f.carbs; document.getElementById('new-fat').value = f.fat; document.getElementById('new-measure').value = f.measure; document.getElementById('new-cat').value = f.cat; document.getElementById('add-modal').classList.add('active'); setTab('manual'); }
+        function openAddModal() { closeModal(); document.getElementById('add-modal').classList.add('active'); setTab('manual'); updateModalTitle(); }
+        function editFood(id) { const f = foods.find(x => x.id === id); if(!f) return; document.getElementById('modal-title').innerText = "Edit Food"; document.getElementById('edit-id').value = f.id; document.getElementById('new-name').value = f.name; document.getElementById('new-carbs').value = f.carbs; document.getElementById('new-fat').value = f.fat; document.getElementById('new-measure').value = f.measure; document.getElementById('new-cat').value = f.cat; document.getElementById('add-modal').classList.add('active'); setTab('manual'); updateModalTitle(); }
         function closeModal() { document.getElementById('add-modal').classList.remove('active'); document.getElementById('edit-id').value = ""; }
+
+        function updateModalTitle() {
+            const s = window._bb_settings || defaultSettings;
+            const titleEl = document.getElementById('modal-title');
+            if (s.name && s.name.trim()) titleEl.innerText = `Add Food — ${s.name.trim()}`;
+            else titleEl.innerText = 'Add Food';
+        }
 
         function setTab(type) {
             document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
@@ -222,12 +315,10 @@
             const c100 = parseFloat(document.getElementById('c100').value) || 0;
             const f100 = parseFloat(document.getElementById('f100').value) || 0;
             const w = parseFloat(document.getElementById('portion').value) || 0;
-            // Only calculate if portion weight provided
             if (w > 0) {
                 document.getElementById('new-carbs').value = ((c100 * w) / 100).toFixed(1);
                 document.getElementById('new-fat').value = ((f100 * w) / 100).toFixed(1);
             } else {
-                // If no portion weight, clear per-serving fields
                 document.getElementById('new-carbs').value = "";
                 document.getElementById('new-fat').value = "";
             }
@@ -250,7 +341,7 @@
             closeModal();
         }
 
-        // CAMERA + OCR (reads Carbs/100g, Fat/100g, and Serving weight)
+        // CAMERA + OCR (reads Carbs/100g, Fat/100g, and Serving weight) - respects settings
         let camStream = null;
         const video = document.getElementById('video');
         const canvas = document.getElementById('canvas');
@@ -267,7 +358,6 @@
                 camStream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: { ideal: "environment" } } });
                 video.srcObject = camStream;
                 await video.play();
-                // small delay to ensure dimensions are available
                 await new Promise(res => setTimeout(res, 200));
             } catch (err) {
                 alert("Permission Error: Please allow camera access in your browser settings.");
@@ -298,19 +388,13 @@
                 canvas.width = video.videoWidth;
                 canvas.height = video.videoHeight;
                 const ctx = canvas.getContext('2d');
-                // draw with slight downscale to reduce OCR noise on very large images
                 ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-                // show loader and stop preview to reduce CPU usage
                 loader.style.display = 'flex';
                 progressEl.innerText = '0%';
-                // capture data URL
                 const dataUrl = canvas.toDataURL('image/png');
-
-                // stop camera preview while OCR runs
                 closeScanner();
 
-                // Use Tesseract with logger to update progress
                 const result = await Tesseract.recognize(dataUrl, 'eng', {
                     logger: m => {
                         if (m && m.status && typeof m.progress === 'number') {
@@ -323,63 +407,59 @@
                 const text = (result && result.data && result.data.text) ? result.data.text : '';
                 console.log('OCR text:', text);
 
-                // Parse values: prefer "per 100g" values for carbs/fat, and serving weight
-                // Patterns:
-                //  - Carbs per 100g: "Carbohydrate 12g per 100g" or "Carbs 12g / 100g" or "Carbs per 100g 12g"
-                //  - Fat per 100g: similar
-                //  - Serving size: "Serving size 30g" or "Serv 30 g" or "1 serving (30g)"
+                // Use settings to decide what to parse
+                const settings = window._bb_settings || loadSettings();
+
                 const lower = text.replace(/\r/g,'\n');
-
-                // Regex to find "number g per 100g" or "number /100g" near carb/fat keywords
-                const per100Regex = /(?:carb|carbohydrate|carbs)[^\d\n\r]{0,30}?(\d+\.?\d*)\s*g\s*(?:\/\s*100g|per\s*100g|per\s*100\s*g)?/i;
-                const per100RegexAlt = /(\d+\.?\d*)\s*g\s*(?:\/\s*100g|per\s*100g|per\s*100\s*g)[^\n\r]{0,30}?(?:carb|carbohydrate|carbs)/i;
-                const fatPer100Regex = /(?:fat|total fat)[^\d\n\r]{0,30}?(\d+\.?\d*)\s*g\s*(?:\/\s*100g|per\s*100g|per\s*100\s*g)?/i;
-                const fatPer100RegexAlt = /(\d+\.?\d*)\s*g\s*(?:\/\s*100g|per\s*100g|per\s*100\s*g)[^\n\r]{0,30}?(?:fat|total fat)/i;
-
-                // Serving size patterns
-                const servingRegex = /serv(?:ing)?(?: size)?[:\s]*?(\d+\.?\d*)\s*g/i;
-                const servingParenRegex = /\((\d+\.?\d*)\s*g\)/i;
-                const servingSimpleRegex = /(\d+\.?\d*)\s*g\s*(?:serving|serv)/i;
 
                 let c100 = null, f100 = null, serving = null;
 
-                let m = lower.match(per100Regex) || lower.match(per100RegexAlt);
-                if (m) c100 = m[1];
+                // Only attempt to parse carbs per 100g if enabled
+                if (settings.scanItems.carb) {
+                    const per100Regex = /(?:carb|carbohydrate|carbs)[^\d\n\r]{0,30}?(\d+\.?\d*)\s*g\s*(?:\/\s*100g|per\s*100g|per\s*100\s*g)?/i;
+                    const per100RegexAlt = /(\d+\.?\d*)\s*g\s*(?:\/\s*100g|per\s*100g|per\s*100\s*g)[^\n\r]{0,30}?(?:carb|carbohydrate|carbs)/i;
+                    let m = lower.match(per100Regex) || lower.match(per100RegexAlt);
+                    if (m) c100 = m[1];
+                }
 
-                m = lower.match(fatPer100Regex) || lower.match(fatPer100RegexAlt);
-                if (m) f100 = m[1];
+                if (settings.scanItems.fat) {
+                    const fatPer100Regex = /(?:fat|total fat)[^\d\n\r]{0,30}?(\d+\.?\d*)\s*g\s*(?:\/\s*100g|per\s*100g|per\s*100\s*g)?/i;
+                    const fatPer100RegexAlt = /(\d+\.?\d*)\s*g\s*(?:\/\s*100g|per\s*100g|per\s*100\s*g)[^\n\r]{0,30}?(?:fat|total fat)/i;
+                    let m = lower.match(fatPer100Regex) || lower.match(fatPer100RegexAlt);
+                    if (m) f100 = m[1];
+                }
 
-                m = lower.match(servingRegex) || lower.match(servingParenRegex) || lower.match(servingSimpleRegex);
-                if (m) serving = m[1];
+                if (settings.scanItems.serving) {
+                    const servingRegex = /serv(?:ing)?(?: size)?[:\s]*?(\d+\.?\d*)\s*g/i;
+                    const servingParenRegex = /\((\d+\.?\d*)\s*g\)/i;
+                    const servingSimpleRegex = /(\d+\.?\d*)\s*g\s*(?:serving|serv)/i;
+                    let m = lower.match(servingRegex) || lower.match(servingParenRegex) || lower.match(servingSimpleRegex);
+                    if (m) serving = m[1];
+                }
 
-                // If OCR didn't find per-100 but found per-serving values and serving weight, compute per-100
-                // Look for "Carbs 12g" (per serving) and "Serving 30g" -> carbs per 100g = (12 / 30) * 100
-                if ((!c100 || !f100) && serving) {
-                    // find carb per serving
+                // If per-100 not found but serving and per-serving values exist and corresponding scan item enabled, compute per-100
+                if (settings.scanItems.serving && (settings.scanItems.carb && !c100 || settings.scanItems.fat && !f100) && serving) {
                     const carbPerServingRegex = /(?:carb|carbohydrate|carbs)[^\d\n\r]{0,30}?(\d+\.?\d*)\s*g(?!\s*\/\s*100g)/i;
                     const fatPerServingRegex = /(?:fat|total fat)[^\d\n\r]{0,30}?(\d+\.?\d*)\s*g(?!\s*\/\s*100g)/i;
                     const cm = lower.match(carbPerServingRegex);
                     const fm = lower.match(fatPerServingRegex);
                     const servVal = parseFloat(serving);
-                    if (cm && !c100 && servVal > 0) {
+                    if (cm && !c100 && servVal > 0 && settings.scanItems.carb) {
                         const perServing = parseFloat(cm[1]);
                         c100 = ((perServing / servVal) * 100).toFixed(1);
                     }
-                    if (fm && !f100 && servVal > 0) {
+                    if (fm && !f100 && servVal > 0 && settings.scanItems.fat) {
                         const perServingFat = parseFloat(fm[1]);
                         f100 = ((perServingFat / servVal) * 100).toFixed(1);
                     }
                 }
 
-                // Populate fields only with per-100 values and serving weight
-                if (c100) document.getElementById('c100').value = parseFloat(c100).toFixed(1);
-                if (f100) document.getElementById('f100').value = parseFloat(f100).toFixed(1);
-                if (serving) document.getElementById('portion').value = parseFloat(serving).toFixed(0);
+                // Populate only the per-100 fields and portion if parsed and enabled
+                if (c100 && settings.scanItems.carb) document.getElementById('c100').value = parseFloat(c100).toFixed(1);
+                if (f100 && settings.scanItems.fat) document.getElementById('f100').value = parseFloat(f100).toFixed(1);
+                if (serving && settings.scanItems.serving) document.getElementById('portion').value = parseFloat(serving).toFixed(0);
 
-                // If we have per-100 and portion, run calc to fill per-serving carbs/fat
                 runCalc();
-
-                // For debugging: console.log parsed values
                 console.log('Parsed c100:', c100, 'f100:', f100, 'serving(g):', serving);
 
             } catch (err) {
@@ -388,17 +468,4 @@
             } finally {
                 loader.style.display = 'none';
                 progressEl.innerText = '0%';
-                // switch to calc tab if we populated per-100 fields
-                if (document.getElementById('c100').value || document.getElementById('f100').value) {
-                    setTab('calc');
-                } else {
-                    setTab('manual');
-                }
-            }
-        }
-
-        // initial render
-        renderFoods();
-    </script>
-</body>
-</html>
+                // switch to calc tab if per-100 fields
